--- a/notebooks/first_notebook/1-python-basics.ipynb
+++ b/notebooks/first_notebook/1-python-basics.ipynb
@@ -186,9 +186,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -300,9 +297,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
@@ -472,32 +466,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "**a)** Create a variable `y` with a value of `7`\n",
-    "\n",
-    "Below is the first example of an autograded jupyter notebook cell.  Replace the lines:\n",
-    "\n",
-    "```python\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "```\n",
-    "with your own answer.\n"
+    "**a)** Create a variable `y` with a value of `7`"
    ]
   },
   {
@@ -525,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You statement should pass the following test, which will pass silently if y=7.  \n"
+    "You statement should pass the following test:"
    ]
   },
   {
@@ -549,14 +523,6 @@
    "source": [
     "from numpy.testing import assert_almost_equal\n",
     "assert_almost_equal(y,7,decimal=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try making it fail by changing the 7 to an 8.  To do that you'll need to create a new\n",
-    "cell below this one (which is locked to modification) and copy assert into that cell."
    ]
   },
   {
@@ -714,9 +680,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -735,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `?` after the function name to see the documentation. (remove the # and execute)"
+    "Use `?` after the function name to see the documentation."
    ]
   },
   {
@@ -744,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#round?"
+    "round?"
    ]
   },
   {
@@ -970,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#fraction_rounded??"
+    "fraction_rounded??"
    ]
   },
   {
@@ -1023,7 +986,7 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "ac00fa7c32215d19f907e214c706c982",
+     "checksum": "e8ac6c11a500077ead460e4b10989327",
      "grade": false,
      "grade_id": "cell-ec6800b6465d8a7b",
      "locked": false,
@@ -1036,7 +999,7 @@
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
     "\n",
-    "# You code should pass the following test:\n",
+    "# You code sould pass the following test:\n",
     "from numpy.testing import assert_almost_equal\n",
     "assert_almost_equal(temp_F,59.0,decimal=1)\n",
     "print(convert_celsius(30))"
@@ -1048,9 +1011,8 @@
    "metadata": {
     "deletable": false,
     "editable": false,
-    "lines_to_next_cell": 2,
     "nbgrader": {
-     "checksum": "2937f56c8545c335c03f73987717e36d",
+     "checksum": "335cfb4b17472a704bc1a0e07e9a667b",
      "grade": true,
      "grade_id": "cell-7aeb0c61250c5a72",
      "locked": true,
@@ -1060,10 +1022,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "# Here is a cell with a hidden test that doesn't show the answer.  We are testing your function\n",
-    "# with a different input value."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1140,9 +1099,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
@@ -1310,9 +1266,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -1332,9 +1285,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -1353,9 +1303,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n"
    ]
@@ -1757,6 +1704,9 @@
    "scroll": true,
    "theme": "solarized",
    "transition": "none"
+  },
+  "nbsphinx": {
+   "execute": "never"
   },
   "toc": {
    "base_numbering": 1,
