--- a/notebooks/first_notebook/1-python-basics.ipynb
+++ b/notebooks/first_notebook/1-python-basics.ipynb
@@ -184,10 +184,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -259,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "today = 'Tuesday'\n",
+    "today = \"Tuesday\"\n",
     "tomorrow = \"Wednesday\""
    ]
   },
@@ -285,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "statement = 'Today is ' + today\n",
+    "statement = \"Today is \" + today\n",
     "statement"
    ]
   },
@@ -296,10 +293,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -438,16 +432,16 @@
     "a = 12\n",
     "\n",
     "if a < 10:\n",
-    "    print('a is less than 10')\n",
+    "    print(\"a is less than 10\")\n",
     "else:\n",
-    "    print('a is greater than or equal to 10')"
+    "    print(\"a is greater than or equal to 10\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Note the **indented** line after each colon `:` \n",
+    "- Note the **indented** line after each colon `:`\n",
     "- Indentation is very important in Python!\n",
     "- In this example, indentation indicates which code is executed if the conditional statement is `True` and which code is executed if the conditional is not `True`"
    ]
@@ -471,7 +465,9 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "**a)** Create a variable `y` with a value of `7`"
+    "**a)** Create a variable `y` with a value of `7`\n",
+    "\n",
+    "The cell below is your first look at an autograded Jupyter notebook cell.  The ideas is that, until you replace the contents of that cell with your answer python will raise an error called \"NotImplemented\". Go ahead and remove replace that statement with your own answer."
    ]
   },
   {
@@ -510,7 +506,7 @@
     "editable": false,
     "lines_to_next_cell": 2,
     "nbgrader": {
-     "checksum": "8879267c006c8430db36b5a51a05930c",
+     "checksum": "8ba1d78dad970b97cdfee8bacb09f270",
      "grade": true,
      "grade_id": "cell-9362f71eb05dffad",
      "locked": true,
@@ -522,7 +518,8 @@
    "outputs": [],
    "source": [
     "from numpy.testing import assert_almost_equal\n",
-    "assert_almost_equal(y,7,decimal=1)"
+    "\n",
+    "assert_almost_equal(y, 7, decimal=1)"
    ]
   },
   {
@@ -537,6 +534,7 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
+    "lines_to_next_cell": 2,
     "nbgrader": {
      "checksum": "c88a0b4b359bcbff4b440549d985d17b",
      "grade": true,
@@ -565,6 +563,7 @@
    "execution_count": null,
    "metadata": {
     "deletable": false,
+    "lines_to_next_cell": 2,
     "nbgrader": {
      "checksum": "3a1108de203d53914adadecae637deb2",
      "grade": true,
@@ -592,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**d) Concatenating strings and integers** \n",
+    "**d) Concatenating strings and integers**\n",
     "\n",
     "Assign a value of `2018` to the variable `year`. What happens if you use the `+` operator to add the string `'The year is '` with the variable `year`, as shown below? (*You'll need to copy the code below into a cell in your notebook in order to run it.*)\n",
     "```python\n",
@@ -612,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**e) Other mathematical operators** \n",
+    "**e) Other mathematical operators**\n",
     "\n",
     "What are the results of the following operations?\n",
     "\n",
@@ -627,7 +626,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**f) Conditional statements** \n",
+    "**f) Conditional statements**\n",
     "\n",
     "Create a conditional statement that prints `'Leap year'` if the value of the variable `year` is divisible by 4, and `'Not a leap year'` otherwise. Test your conditional statement by assigning different values to `year` and re-running the code."
    ]
@@ -678,10 +677,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -698,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `?` after the function name to see the documentation."
+    "Use `?` after the function name to see the documentation. (remove the # to try this)"
    ]
   },
   {
@@ -707,7 +703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "round?"
+    "# round?"
    ]
   },
   {
@@ -751,7 +747,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "round(1/3, 5)"
+    "round(1 / 3, 5)"
    ]
   },
   {
@@ -767,7 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_third = round(1/3, 5)\n",
+    "one_third = round(1 / 3, 5)\n",
     "one_third"
    ]
   },
@@ -785,7 +781,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def fraction(num, denom):\n",
@@ -816,7 +814,7 @@
    "metadata": {},
    "source": [
     "Or, we can use use the labels `num` and `denom` to specify input values in any order we want in our function call.\n",
-    "- These inputs are referred to as **keyword arguments**. \n",
+    "- These inputs are referred to as **keyword arguments**.\n",
     "\n",
     "> Pro Tip: Auto-complete works for keyword arguments too!"
    ]
@@ -851,7 +849,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def fraction_rounded(num, denom, ndigits=2):\n",
@@ -888,7 +888,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "def fraction_rounded(num, denom, ndigits=2):\n",
@@ -917,7 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fraction_rounded?"
+    "# fraction_rounded?"
    ]
   },
   {
@@ -933,7 +935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fraction_rounded??"
+    "# fraction_rounded??"
    ]
   },
   {
@@ -986,7 +988,7 @@
    "metadata": {
     "deletable": false,
     "nbgrader": {
-     "checksum": "e8ac6c11a500077ead460e4b10989327",
+     "checksum": "6d0de1b7be4203dc903d5a2fc9b4c766",
      "grade": false,
      "grade_id": "cell-ec6800b6465d8a7b",
      "locked": false,
@@ -1001,7 +1003,8 @@
     "\n",
     "# You code sould pass the following test:\n",
     "from numpy.testing import assert_almost_equal\n",
-    "assert_almost_equal(temp_F,59.0,decimal=1)\n",
+    "\n",
+    "assert_almost_equal(temp_F, 59.0, decimal=1)\n",
     "print(convert_celsius(30))"
    ]
   },
@@ -1012,7 +1015,7 @@
     "deletable": false,
     "editable": false,
     "nbgrader": {
-     "checksum": "335cfb4b17472a704bc1a0e07e9a667b",
+     "checksum": "23b5eba537eb3db8f3db1f83a8f30dac",
      "grade": true,
      "grade_id": "cell-7aeb0c61250c5a72",
      "locked": true,
@@ -1022,7 +1025,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# This cell contains a hiddent test that calls your function with another value for temp_celsius\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1031,7 +1036,7 @@
     "### Bonus exercises\n",
     "\n",
     "**c)** Create a new function based on your function from part (a), which converts the temperature from Celsius to Fahrenheit and also prints a message about the temperature:\n",
-    "- If the input temperature is less than 10 C, it prints `'Chilly!'`, \n",
+    "- If the input temperature is less than 10 C, it prints `'Chilly!'`,\n",
     "- Otherwise, it prints `'OK'`.\n",
     "\n",
     "Call the function with different input temperatures to test it."
@@ -1063,7 +1068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = 'Hello world.'\n",
+    "message = \"Hello world.\"\n",
     "message.upper()"
    ]
   },
@@ -1098,10 +1103,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1109,7 +1111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_message = message.replace('world', 'universe')\n",
+    "new_message = message.replace(\"world\", \"universe\")\n",
     "new_message"
    ]
   },
@@ -1126,7 +1128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "message.replace('hello', 'hi')"
+    "message.replace(\"hello\", \"hi\")"
    ]
   },
   {
@@ -1142,7 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shouting = message.upper().replace('.', '!!!')\n",
+    "shouting = message.upper().replace(\".\", \"!!!\")\n",
     "shouting"
    ]
   },
@@ -1161,7 +1163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter']\n",
+    "planets = [\"Mercury\", \"Venus\", \"Earth\", \"Mars\", \"Jupiter\"]\n",
     "planets"
    ]
   },
@@ -1181,7 +1183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "different_data_types = [3.14, 'Canada', 62/7, 1729]\n",
+    "different_data_types = [3.14, \"Canada\", 62 / 7, 1729]\n",
     "different_data_types"
    ]
   },
@@ -1221,7 +1223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each element in a list can be accessed by an **index**.  \n",
+    "Each element in a list can be accessed by an **index**.\n",
     "- Note that Python indexes start with 0 instead of 1."
    ]
   },
@@ -1264,10 +1266,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1283,10 +1282,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1302,10 +1298,7 @@
     "lines_to_next_cell": 2
    },
    "outputs": [],
-   "source": [
-    "\n",
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1390,7 +1383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planets[3] = 'MARS!'\n",
+    "planets[3] = \"MARS!\"\n",
     "planets"
    ]
   },
@@ -1409,7 +1402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planets.append('Uranus')\n",
+    "planets.append(\"Uranus\")\n",
     "planets"
    ]
   },
@@ -1436,7 +1429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The variable `planet` is re-created for every iteration in the loop until the list `planets` has been exhausted. "
+    "The variable `planet` is re-created for every iteration in the loop until the list `planets` has been exhausted."
    ]
   },
   {
@@ -1453,7 +1446,7 @@
    "outputs": [],
    "source": [
     "for planet in planets:\n",
-    "    print('I live on ' + planet)"
+    "    print(\"I live on \" + planet)"
    ]
   },
   {
@@ -1485,7 +1478,7 @@
    "source": [
     "### Bonus exercises\n",
     "\n",
-    "**d) Creating a sequence of integers** \n",
+    "**d) Creating a sequence of integers**\n",
     "\n",
     "The built-in function `range` produces a sequence of integers from a specified start (inclusive) to stop (exclusive). This can be helpful when we want to loop over a long sequence of numbers without manually creating a list of those numbers. Try copying the code below into your notebook and running it to see how it works:\n",
     "\n",
@@ -1504,10 +1497,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**e) Negative indices** \n",
+    "**e) Negative indices**\n",
     "\n",
     "- Display the item at index `-1` of your list `numbers` from part (a).\n",
-    "- How about index `-2`, `-3`, etc? \n",
+    "- How about index `-2`, `-3`, etc?\n",
     "- What do you conclude about negative indices?"
    ]
   },
@@ -1515,7 +1508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**f) More about slices** \n",
+    "**f) More about slices**\n",
     "\n",
     "- Display the slices `numbers[::2]`, `numbers[1:6:2]`, and `numbers[::-1]`.\n",
     "- What do you conclude about the number after the second colon?\n",
@@ -1526,9 +1519,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**g) Indexing with strings** \n",
+    "**g) Indexing with strings**\n",
     "\n",
-    "Create a variable `city` with a value of `'Vancouver'`. \n",
+    "Create a variable `city` with a value of `'Vancouver'`.\n",
     "- Display the values of `city[0]` and `city[3:7]`.\n",
     "- What do you conclude about indexing string variables?\n",
     "- What happens if you try to assign `city[6] = 'Q'`?"
@@ -1549,7 +1542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit_colors = {'banana' : 'yellow', 'strawberry' : 'red'}\n",
+    "fruit_colors = {\"banana\": \"yellow\", \"strawberry\": \"red\"}\n",
     "fruit_colors"
    ]
   },
@@ -1557,7 +1550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Dictionaries work a lot like lists - except that they are indexed with **keys**. \n",
+    "- Dictionaries work a lot like lists - except that they are indexed with **keys**.\n",
     "- Think about a key as a unique identifier for a set of values in the dictionary.\n",
     "- Keys can only have particular types - they have to be \"hashable\".\n",
     "  - Strings and numeric types are acceptable, but lists aren't."
@@ -1569,7 +1562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit_colors['banana']"
+    "fruit_colors[\"banana\"]"
    ]
   },
   {
@@ -1585,7 +1578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit_colors['apple'] = 'green'\n",
+    "fruit_colors[\"apple\"] = \"green\"\n",
     "fruit_colors"
    ]
   },
@@ -1603,7 +1596,7 @@
    "outputs": [],
    "source": [
     "for fruit in fruit_colors:\n",
-    "    print(fruit + ' is ' + fruit_colors[fruit])"
+    "    print(fruit + \" is \" + fruit_colors[fruit])"
    ]
   },
   {
@@ -1619,7 +1612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fruit_colors['bannana']"
+    "fruit_colors[\"bannana\"]"
    ]
   },
   {
@@ -1704,9 +1697,6 @@
    "scroll": true,
    "theme": "solarized",
    "transition": "none"
-  },
-  "nbsphinx": {
-   "execute": "never"
   },
   "toc": {
    "base_numbering": 1,
