--- a/notebooks/first_notebook/1-python-basics.ipynb
+++ b/notebooks/first_notebook/1-python-basics.ipynb
@@ -1698,6 +1698,9 @@
    "theme": "solarized",
    "transition": "none"
   },
+  "nbsphinx": {
+   "execute": "never"
+  },
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
